--- a/public/book/braised-pork-with-potatoes.html
+++ b/public/book/braised-pork-with-potatoes.html
@@ -138,6 +138,16 @@
                     </div>
                 </div>
             </div>
+            <!-- Back to recipes -->
+            <div class="row wow rollIn">
+                <div class="col-12 text-center">
+                    <a href="/">
+                        <i class="fa fa-backward" aria-hidden="true"></i>
+                        Go to back to recipes.
+                    </a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- JavaScript files
