--- a/public/book/russian-soup.html
+++ b/public/book/russian-soup.html
@@ -57,8 +57,7 @@
                 <div class="col-12">
                     <!-- Picture -->
                     <div class="col-md-8 pull-left wow swing">
-                        <img src="images/russian-soup.png" alt="russian-soup"
-                            class="recipe-picture" />
+                        <img src="images/russian-soup.png" alt="russian-soup" class="recipe-picture" />
                     </div>
                     <!-- Info -->
                     <div class="col-md-4 pull-right wow lightSpeedIn">
@@ -143,6 +142,16 @@
                     </div>
                 </div>
             </div>
+            <!-- Back to recipes -->
+            <div class="row wow rollIn">
+                <div class="col-12 text-center">
+                    <a href="/">
+                        <i class="fa fa-backward" aria-hidden="true"></i>
+                        Go to back to recipes.
+                    </a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- JavaScript files
