--- a/public/book/braised-beef-carrot.html
+++ b/public/book/braised-beef-carrot.html
@@ -84,6 +84,13 @@
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="col-2 text-center">
+                                    <i class="fa fa-list" aria-hidden="true"></i>
+                                </div>
+                                <div class="col-6">营养</div>
+                                <div class="col-4">巴拉巴拉</div>
+                            </div>
                         </div>
                     </div>
                     <!-- Ingredients -->
