--- a/public/book/braised-beef-carrot.html
+++ b/public/book/braised-beef-carrot.html
@@ -116,6 +116,26 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- 营养成分 -->
+                    <div class="row wow slideInUp">
+                        <div class="col-12">
+                            <div class="recipe-ingredients">
+                                <h3>营养成分</h3>
+                                <dl class="ingredients-list">
+                                    <dt>热量</dt>
+                                    <dd>91.23cal/100g</dd>
+                                    <dt>碳水 </dt>
+                                    <dd>4.20g/100g</dd>
+                                    <dt>脂肪</dt>
+                                    <dd>3.87g/100g</dd>
+                                    <dt>蛋白质</dt>
+                                    <dd>10.43g/100g</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- Directions -->
                     <div class="row wow slideInUp">
                         <div class="col-12">
