--- a/public/book/fried-rice-tomato.html
+++ b/public/book/fried-rice-tomato.html
@@ -105,6 +105,26 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- 营养成分 -->
+                    <div class="row wow slideInUp">
+                        <div class="col-12">
+                            <div class="recipe-ingredients">
+                                <h3>营养成分</h3>
+                                <dl class="ingredients-list">
+                                    <dt>热量</dt>
+                                    <dd>137.40cal/100g</dd>
+                                    <dt>碳水 </dt>
+                                    <dd>21.56g/100g</dd>
+                                    <dt>脂肪</dt>
+                                    <dd>4.09g/100g</dd>
+                                    <dt>蛋白质</dt>
+                                    <dd>4.33g/100g</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- Directions -->
                     <div class="row wow slideInUp">
                         <div class="col-12">
