--- a/public/book/multi-fruit-oatmeal.html
+++ b/public/book/multi-fruit-oatmeal.html
@@ -108,6 +108,26 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- 营养成分 -->
+                    <div class="row wow slideInUp">
+                        <div class="col-12">
+                            <div class="recipe-ingredients">
+                                <h3>营养成分</h3>
+                                <dl class="ingredients-list">
+                                    <dt>热量</dt>
+                                    <dd>358.58cal/100g</dd>
+                                    <dt>碳水 </dt>
+                                    <dd>58.10g/100g</dd>
+                                    <dt>脂肪</dt>
+                                    <dd>7.40g/100g</dd>
+                                    <dt>蛋白质</dt>
+                                    <dd>9.90g/100g</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- Directions -->
                     <div class="row wow slideInUp">
                         <div class="col-12">
