--- a/public/book/mushroom-soup.html
+++ b/public/book/mushroom-soup.html
@@ -102,6 +102,26 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- 营养成分 -->
+                    <div class="row wow slideInUp">
+                        <div class="col-12">
+                            <div class="recipe-ingredients">
+                                <h3>营养成分</h3>
+                                <dl class="ingredients-list">
+                                    <dt>热量</dt>
+                                    <dd>69.44cal/100g</dd>
+                                    <dt>碳水 </dt>
+                                    <dd>7.91g/100g</dd>
+                                    <dt>脂肪</dt>
+                                    <dd>0.82g/100g</dd>
+                                    <dt>蛋白质</dt>
+                                    <dd>9.71g/100g</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- Directions -->
                     <div class="row wow slideInUp">
                         <div class="col-12">
