--- a/public/book/chinese-pronunciation-stir-fry-shredded-white-radish.html
+++ b/public/book/chinese-pronunciation-stir-fry-shredded-white-radish.html
@@ -100,6 +100,26 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- 营养成分 -->
+                    <div class="row wow slideInUp">
+                        <div class="col-12">
+                            <div class="recipe-ingredients">
+                                <h3>营养成分</h3>
+                                <dl class="ingredients-list">
+                                    <dt>热量</dt>
+                                    <dd>72.00cal/100g</dd>
+                                    <dt>碳水 </dt>
+                                    <dd>14.66g/100g</dd>
+                                    <dt>脂肪</dt>
+                                    <dd>1.46g/100g</dd>
+                                    <dt>蛋白质</dt>
+                                    <dd>0.79g/100g</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- Directions -->
                     <div class="row wow slideInUp">
                         <div class="col-12">
