--- a/public/book/french-toast-berries.html
+++ b/public/book/french-toast-berries.html
@@ -107,6 +107,26 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- 营养成分 -->
+                    <div class="row wow slideInUp">
+                        <div class="col-12">
+                            <div class="recipe-ingredients">
+                                <h3>营养成分</h3>
+                                <dl class="ingredients-list">
+                                    <dt>热量</dt>
+                                    <dd>195.51cal/100g</dd>
+                                    <dt>碳水 </dt>
+                                    <dd>33.13g/100g</dd>
+                                    <dt>脂肪</dt>
+                                    <dd>4.24g/100g</dd>
+                                    <dt>蛋白质</dt>
+                                    <dd>6.65g/100g</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- Directions -->
                     <div class="row wow slideInUp">
                         <div class="col-12">
