--- a/public/book/multi-fruit-toast.html
+++ b/public/book/multi-fruit-toast.html
@@ -103,6 +103,26 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- 营养成分 -->
+                    <div class="row wow slideInUp">
+                        <div class="col-12">
+                            <div class="recipe-ingredients">
+                                <h3>营养成分</h3>
+                                <dl class="ingredients-list">
+                                    <dt>热量</dt>
+                                    <dd>287.58cal/100g</dd>
+                                    <dt>碳水 </dt>
+                                    <dd>31.17g/100g</dd>
+                                    <dt>脂肪</dt>
+                                    <dd>16.36g/100g</dd>
+                                    <dt>蛋白质</dt>
+                                    <dd>4.97g/100g</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- Directions -->
                     <div class="row wow slideInUp">
                         <div class="col-12">
