--- a/public/book/russian-soup.html
+++ b/public/book/russian-soup.html
@@ -123,6 +123,26 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- 营养成分 -->
+                    <div class="row wow slideInUp">
+                        <div class="col-12">
+                            <div class="recipe-ingredients">
+                                <h3>营养成分</h3>
+                                <dl class="ingredients-list">
+                                    <dt>热量</dt>
+                                    <dd>155.17cal/100g</dd>
+                                    <dt>碳水 </dt>
+                                    <dd>8.51g/100g</dd>
+                                    <dt>脂肪</dt>
+                                    <dd>7.08g/100g</dd>
+                                    <dt>蛋白质</dt>
+                                    <dd>10.03g/100g</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- Directions -->
                     <div class="row wow slideInUp">
                         <div class="col-12">
