--- a/public/book/special-waffle.html
+++ b/public/book/special-waffle.html
@@ -104,6 +104,26 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- 营养成分 -->
+                    <div class="row wow slideInUp">
+                        <div class="col-12">
+                            <div class="recipe-ingredients">
+                                <h3>营养成分</h3>
+                                <dl class="ingredients-list">
+                                    <dt>热量</dt>
+                                    <dd>322.00cal/100g</dd>
+                                    <dt>碳水 </dt>
+                                    <dd>26.50g/100g</dd>
+                                    <dt>脂肪</dt>
+                                    <dd>6.90g/100g</dd>
+                                    <dt>蛋白质</dt>
+                                    <dd>7.00g/100g</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- Directions -->
                     <div class="row wow slideInUp">
                         <div class="col-12">
