--- a/public/book/stewed-eggplant-potato.html
+++ b/public/book/stewed-eggplant-potato.html
@@ -114,6 +114,26 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- 营养成分 -->
+                    <div class="row wow slideInUp">
+                        <div class="col-12">
+                            <div class="recipe-ingredients">
+                                <h3>营养成分</h3>
+                                <dl class="ingredients-list">
+                                    <dt>热量</dt>
+                                    <dd>94.66cal/100g</dd>
+                                    <dt>碳水 </dt>
+                                    <dd>15.27g/100g</dd>
+                                    <dt>脂肪</dt>
+                                    <dd>3.34g/100g</dd>
+                                    <dt>蛋白质</dt>
+                                    <dd>1.47g/100g</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- Directions -->
                     <div class="row wow slideInUp">
                         <div class="col-12">
