--- a/public/book/tomato-spare-ribs-soup.html
+++ b/public/book/tomato-spare-ribs-soup.html
@@ -102,6 +102,26 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- 营养成分 -->
+                    <div class="row wow slideInUp">
+                        <div class="col-12">
+                            <div class="recipe-ingredients">
+                                <h3>营养成分</h3>
+                                <dl class="ingredients-list">
+                                    <dt>热量</dt>
+                                    <dd>63.48cal/100g</dd>
+                                    <dt>碳水 </dt>
+                                    <dd>0.55g/100g</dd>
+                                    <dt>脂肪</dt>
+                                    <dd>5.23g/100g</dd>
+                                    <dt>蛋白质</dt>
+                                    <dd>3.67g/100g</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- Directions -->
                     <div class="row wow slideInUp">
                         <div class="col-12">
